feat: add Vue Tanstack App

--- a/practice/vue-app/package.json
+++ b/practice/vue-app/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.25.0",
+    "@tanstack/vue-query-devtools": "^5.25.0",
+    "pinia": "^2.1.7",
     "vue": "^3.3.11"
   },
   "devDependencies": {
